# speech-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
src/speech_cli/agents/: __init__.py  base.py  chat_agent.py  generator_agent.py  translator_agent.py
src/speech_cli/agents/sub_agents/: base.py
src/speech_cli/agents/system_messages/: GENERATOR.md  TRANSLATOR.md  __init__.py
src/speech_cli/cli/: __init__.py  cli.py  screens.py  styles.tcss  widgets.py
src/speech_cli/config/: __init__.py  _api_config.py  _app_config.py
src/speech_cli/config/logging/: __init__.py  filters.py
src/speech_cli/core/: base_agent.py  decorators.py  llm.py  tool_call.py  utils.py
src/speech_cli/core/system_messages/: CHAT.md  GENERATOR.md  TRANSLATOR.md  __init__.py
src/speech_cli/core/tools/: __init__.py  _agent_tool.py  _change_directory.py  _delete_file_content.py  _get_current_directory.py  _handoff.py  _insert_file_content.py  _list_directory.py  _read_file.py  _run_javascript_test.py  _run_python_test.py  _terminal.py  _update_file_content.py  _write_file.py
