[project]
name = "speech-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.2",
    "python-dotenv>=1.1.1",
    "textual-autocomplete>=4.0.5",
    "textual[syntax]>=5.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "textual-dev>=1.7.0",
]

[project.scripts]
speech = "speech_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "src/speech_cli",
]

[tool.hatch.build.targets.wheel]
packages = ["src/speech_cli"]

[tool.hatch.build.targets.wheel.sources]
"src/speech_cli" = "speech_cli"
